--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.8.1
 anyio==3.6.1
 click==8.1.3
 fastapi==0.80.0
@@ -7,6 +8,7 @@ idna==3.3
 fastapi_sqlalchemy==0.2.1
 pydantic==1.9.2
 python-dotenv==0.20.0
+psycopg2-binary==2.9.5
 PyYAML==6.0
 sniffio==1.2.0
 starlette==0.19.1
